--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     --text: #FFF;
     --success: #6DA34D;
     --error: #BB3434;
-    font-size: clamp(2.5vh, 1.8rem, 5vw);
+    font-size: clamp(2.5vh, 1.3rem, 5vw);
     font-family: Arial, Helvetica, sans-serif;
     
     --primary: #B52B65;
@@ -43,6 +43,9 @@ body {
     overflow: hidden;
 }
 
+h1 {
+    font-size: 3em;
+}
 
 #title-box {
     width: 100%;
@@ -104,6 +107,7 @@ body {
     padding: 0.3em;
     box-sizing: border-box;
     margin-bottom: 1em;
+    font-size: 1.3em;
 
     transition: border-radius 0.1s;
 
