--- a/index.css
+++ b/index.css
@@ -49,9 +49,6 @@ h1 {
 
 #title-box {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     position: relative;
 }
 
@@ -67,21 +64,19 @@ h1 {
     box-shadow: inset 2.5ch 0px 1.5ch -0.5ch var(--bg);
 }
 
-#title {
-    /* To allow absolute on children */
-    position: relative;
-    /* Offset "lice" */
-    left: 1ch;
-}
-
 #aaa {
-    position: absolute;
-    right: 100%;
+    width: calc(50% + 1ch);
+    display: inline-block;
+    text-align: right;
     overflow: hidden;
+    vertical-align: top;
+    height: 100%;
+    position: relative
 }
 
 #aaa-scroll {
-    position: relative;
+    position: absolute;
+    right: -2ch;
 }
 #title-box:hover #aaa-scroll {
     animation: 0.5s linear infinite scroll;
