--- a/index.css
+++ b/index.css
@@ -56,18 +56,15 @@ h1 {
 
 #aaa {
     flex: 1 1 auto;
-    display: inline-block;
-    text-align: right;
     overflow: hidden;
     vertical-align: top;
     height: 100%;
     position: relative;
-    right: -1ch;
+    margin-right: -1ch;
 }
 
 #lice {
-    position: relative;
-    left: 1ch;
+    padding-left: 1ch;
 }
 
 #flex-spacer {
