--- a/index.css
+++ b/index.css
@@ -247,3 +247,13 @@ h1 {
         fill: #7cc0ea;
     }
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    margin: 1em;
+
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+}
